test/syc/bad/contnoloop.c
/*
 * Continue without enclosing loop statement
 */

int main(void)
{
	continue;
	return 0;
}
